@@ -1,5 +1,7 @@
 2008-08-08  Tor Lillqvist  <tml@novell.com>
 
+	* gwin32mount.c: Remove unused code. Whitespace cleanup.
+
 	* gwin32volumemonitor.c (get_connected_drives): Put questionable
 	code that didn't actually do anything inside #if 0, and add a
 	comment wondering what the code was supposed to do. This also gets
